--- a/qishicpc/ds004/hw5.html
+++ b/qishicpc/ds004/hw5.html
@@ -65,7 +65,7 @@
     <div class="gap-500">
       <p>P5: <a href="https://leetcode.com/problems/trapping-rain-water-ii/" target="_blank" rel="noopener noreferrer">LC407. Trapping Rain Water II</a></p>
       <p>Time complexity: O(m * n * log(m + n))</p>
-      <p>Leetcode runtime &amp; memory (cpp): 48 ms (44.19%) &amp; 13.2 MB (To be improved ...)</p>
+      <p>Leetcode runtime &amp; memory (cpp): 12 ms (100.00%) &amp; 12.9 MB</p>
       <p>Solution:</p>
       <iframe src="https://leetcode.com/playground/do9XPipo/shared" frameBorder="0" width="800" height="300"></iframe>
     </div>
