--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   
   <body>
-    This is the personal homepage of smartzdp.
+    <p>This is the personal homepage of smartzdp.</p>
     
     HomeWork:
     <p><a href="https://smartzdp.github.io/qishicpc/al007/hw1.html" target="_blank" rel="noopener noreferrer">AL007 HW1</a></p>
