--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
           <ul>
             <li>QiShi Career Path Club:
               <ul>
-                <li><a href="https://smartzdp.github.io/qishicpc/al007/hw1.html">7th Algorithm Study Group</a></li>
-                <li><a href="https://smartzdp.github.io/qishicpc/al007/hw1.html">4th Data Structure Study Group</a></li>
+                <li><a href="https://smartzdp.github.io/qishicpc/al007/index.html">7th Algorithm Study Group</a></li>
+                <li><a href="https://smartzdp.github.io/qishicpc/ds004/index.html">4th Data Structure Study Group</a></li>
               </ul>
             </li>
             <li>Data Application Lab:
               <ul>
-                <li><a href="https://smartzdp.github.io/qishicpc/al007/hw1.html">Big Data for Data Scientist</a></li>
+                <li><a href="https://smartzdp.github.io/dataapplab/bigdata/index.html">Big Data for Data Scientist</a></li>
               </ul>
             </li>
           </ul>
