--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </ul>
       
       <div class="footer border-top border-gray-light mt-5 pt-3 text-right text-gray">
-        This site is open source. <a href="https://github.com/smartzdp/smartzdp.github.io/edit/master/README.md">Improve this page</a>.
+        This site is open source. <a href="https://github.com/smartzdp/smartzdp.github.io">Improve this page</a>.
       </div>
       
     </div>
