--- a/qishicpc/al007/index.html
+++ b/qishicpc/al007/index.html
@@ -12,11 +12,11 @@
     <meta property="og:locale" content="en_US" />
     <meta name="description" content="Personal Homepage" />
     <meta property="og:description" content="Personal Homepage" />
-    <link rel="canonical" href="https://smartzdp.github.io/" />
-    <meta property="og:url" content="https://smartzdp.github.io/" />
+    <link rel="canonical" href="https://smartzdp.github.io/qishicpc/al007/index.html" />
+    <meta property="og:url" content="https://smartzdp.github.io/qishicpc/al007/index.html" />
     <meta property="og:site_name" content="smartzdp.github.io" />
     <script type="application/ld+json">
-    {"@type":"WebSite","url":"https://smartzdp.github.io/","description":"Personal Homepage","name":"smartzdp.github.io","headline":"QiShi Career Path Club 7th Algorithm Study Group","@context":"https://schema.org"}</script>
+    {"@type":"WebSite","url":"https://smartzdp.github.io/qishicpc/al007/index.html","description":"Personal Homepage","name":"smartzdp.github.io","headline":"QiShi Career Path Club 7th Algorithm Study Group","@context":"https://schema.org"}</script>
     <!-- End Jekyll SEO tag -->
     
     <link rel="stylesheet" href="/assets/css/style.css?v=a3dee0fb372c0b3f37bfedea4c1ef1ef4d1ed71d">
