--- a/dataapplab/mysql/SQL-for-Analyst-1.html
+++ b/dataapplab/mysql/SQL-for-Analyst-1.html
@@ -13120,7 +13120,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="1.-Show-Command">1. Show Command<a class="anchor-link" href="#1.-Show-Command">&#182;</a></h2>
+<h2 id="1.-MySQL-Show-Commands">1. MySQL Show Commands<a class="anchor-link" href="#1.-MySQL-Show-Commands">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -14186,7 +14186,7 @@ select * from orders;
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="2.-Query-Command">2. Query Command<a class="anchor-link" href="#2.-Query-Command">&#182;</a></h2>
+<h2 id="2.-MySQL-Query-Commands">2. MySQL Query Commands<a class="anchor-link" href="#2.-MySQL-Query-Commands">&#182;</a></h2>
 </div>
 </div>
 </div>
@@ -17110,7 +17110,7 @@ from
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h2 id="3.-Aggregation-Command">3. Aggregation Command<a class="anchor-link" href="#3.-Aggregation-Command">&#182;</a></h2>
+<h2 id="3.-MySQL-Aggregation-Commands">3. MySQL Aggregation Commands<a class="anchor-link" href="#3.-MySQL-Aggregation-Commands">&#182;</a></h2>
 </div>
 </div>
 </div>
