--- a/qishicpc/aa001/hw1.html
+++ b/qishicpc/aa001/hw1.html
@@ -12,9 +12,9 @@
         color:black;
         font-family:Arial, Helvetica, sans-serif;
       }
-      .gap-1000 {
+      .gap-2000 {
         width:800px;
-        height:1000px;
+        height:2000px;
         margin:auto;
         background-color:white;
         text-align:left;
@@ -30,10 +30,12 @@
       <p>Depei Zhang</p>
     </div>
     
-    <div class="gap-1000">
+    <div class="gap-2000">
       <p>Problem 1:</p>
       <p>1. Implement a program that ouputs the shortest distance A &#8594 J in the following graph using A<sup>*</sup> and heap.</p>
       <p>2. Make another version to also output the shorest path.</p>
+      <img src="astar_graph2.png" alt="" width="" height="">
+      
       <p>Solution:</p>
       <iframe src="https://leetcode.com/playground/JrztR299/shared" frameBorder="0" width="800" height="780"></iframe>
     </div>
