--- a/qishicpc/aa001/hw1.html
+++ b/qishicpc/aa001/hw1.html
@@ -34,7 +34,7 @@
       <p>Problem 1:</p>
       <p>1. Implement a program that ouputs the shortest distance A &#8594 J in the following graph using A<sup>*</sup> and heap.</p>
       <p>2. Make another version to also output the shorest path.</p>
-      <img src="https://github.com/smartzdp/smartzdp.github.io/blob/master/qishicpc/aa001/astar_graph2.png" alt="" width="800" height="">
+      <img src="https://github.com/smartzdp/smartzdp.github.io/blob/master/qishicpc/aa001/astar_graph2.png" alt="" width="800" height="390">
       
       <p>Solution:</p>
       <iframe src="https://leetcode.com/playground/JrztR299/shared" frameBorder="0" width="800" height="780"></iframe>
