--- a/qishicpc/aa001/hw1.html
+++ b/qishicpc/aa001/hw1.html
@@ -21,6 +21,7 @@
         color:black;
         font-family:Arial, Helvetica, sans-serif;
       }
+      img {max-width:100%; height:auto}
     </style>
   </head>
   
@@ -34,7 +35,7 @@
       <p>Problem 1:</p>
       <p>1. Implement a program that ouputs the shortest distance A &#8594 J in the following graph using A<sup>*</sup> and heap.</p>
       <p>2. Make another version to also output the shorest path.</p>
-      <img src="https://github.com/smartzdp/smartzdp.github.io/blob/master/qishicpc/aa001/astar_graph2.png" alt="graph2">
+      <img src="https://github.com/smartzdp/smartzdp.github.io/blob/master/qishicpc/aa001/astar_graph2.png" alt="graph2" width="" height="">
       
       <p>Solution:</p>
       <iframe src="https://leetcode.com/playground/JrztR299/shared" frameBorder="0" width="800" height="780"></iframe>
