--- a/qishicpc/aa001/hw1.html
+++ b/qishicpc/aa001/hw1.html
@@ -35,9 +35,9 @@
       <p>Problem 1:</p>
       <p>1. Implement a program that ouputs the shortest distance A &#8594 J in the following graph using A<sup>*</sup> and heap.</p>
       <p>2. Make another version to also output the shorest path.</p>
-      <img src="https://raw.githubusercontent.com/smartzdp/smartzdp.github.io/master/qishicpc/aa001/astar_graph1.png" alt="graph2" width="" height="">Graph 1: start = s, target = t (extracted from Yi Bao's lecture slides).</img>
+      <img src="https://raw.githubusercontent.com/smartzdp/smartzdp.github.io/master/qishicpc/aa001/astar_graph1.png" alt="graph2" style="margin:0 0 30px 0">Graph 1: start = s, target = t (extracted from Yi Bao's lecture slides).</img>
       <br>
-      <img src="https://raw.githubusercontent.com/smartzdp/smartzdp.github.io/master/qishicpc/aa001/astar_graph2.png" alt="graph2" width="" height="">Graph 2: start = A, target = J (extracted from Yi Bao's lecture slides).</img>
+      <img src="https://raw.githubusercontent.com/smartzdp/smartzdp.github.io/master/qishicpc/aa001/astar_graph2.png" alt="graph2" style="margin:0 0 30px 0">Graph 2: start = A, target = J (extracted from Yi Bao's lecture slides).</img>
       <p>Solution:</p>
       <iframe src="https://leetcode.com/playground/JrztR299/shared" frameBorder="0" width="800" height="780"></iframe>
     </div>
